# tower-jumps

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  TESTING.md  entrypoint.sh  env.example  pyproject.toml  pytest.ini
backend/config/: settings.py  urls.py
backend/core/: filters.py  models.py  serializers.py  urls.py  views.py
backend/core/algorithms/: __init__.py  base.py  clustering.py  majority_vote.py
backend/core/management/commands/: import_data.py  import_usa_states.py
backend/core/migrations/: 0001_initial.py  0002_locationinterval_alter_subscriberping_subscriber.py  0003_alter_subscriberping_cell_type.py
backend/core/tests/: __init__.py  algorithms_tests.py  endpoints_tests.py  factories.py  fixtures.py  integration_tests.py  models_tests.py  performance_tests.py
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/service/: api.ts
infra/: README.md  build-and-push.sh  ecr.tf  ecs.tf  frontend.tf  main.tf  outputs.tf  package_lambda.sh  rds.tf  terraform.tfvars.example  variables.tf
infra/lambda_functions/: enable_postgis.py
